Fixing Parke Express Image

--- a/sponsors.html
+++ b/sponsors.html
@@ -40,7 +40,7 @@
                     <h2 style="font-size: 50px;"><b>Parke Express</b></h2>
                     <h3 style="color: rgb(109, 245, 255);">They will have a booth at the show, and printed the trophy!</h3>
                     <h3 style="color: rgb(109, 245, 255);">A 3D Printing business.</h3>
-                    <img src="images/parkeexpress.png" alt="Berry Station" style="width: 200%;">
+                    <img src="images/ParkeExpress.png" alt="Parke Express" style="width: 200%;">
                 </a>
             </div>
         </div>
@@ -48,7 +48,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 CLMilkshake</p>
+        <p>&copy; 2025 CLMilkshake</p>
     </footer>
     
 
