--- a/sponsors.html
+++ b/sponsors.html
@@ -30,7 +30,7 @@
             <div class="grid-item">
                 <a href="https://getberrystation.com">
                     <h2 style="font-size: 50px;"><b>Berry Station</b></h2>
-                    <h3 style="color: rgb(109, 245, 255);">Sponsored the stage!</h3>
+                    <h3 style="color: rgb(109, 245, 255);">Sponsored the stage and giveaways!</h3>
                     <h3 style="color: rgb(109, 245, 255);">We believe the person who knows your taste buds best is YOU! You're in the conductor's seat. Choose from our wide variety of soft serve flavors and the nearly endless combinations of mix-ins and toppings to create the ultimate dessert suited perfectly for you.</h3>
                     <img src="images/berrystation.png" alt="Berry Station">
                 </a>
