Just kinda dumb I guess

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav>
         <b><a href="#">Home</a></b>
-        <b><a href="theboard.html">Projects</a></b>
+        <b><a href="theboard.html">Info</a></b>
         <b><a href="sponsors.html">Sponsors</a></b>
     </nav>
 
