--- a/sponsors.html
+++ b/sponsors.html
@@ -20,6 +20,7 @@
     <nav>
         <b><a href="index.html">Home</a></b>
         <b><a href="theboard.html">Info</a></b>
+        <b><a href="scores.html">Scores</a></b>
         <b><a href="sponsors.html">Sponsors</a></b>
     </nav>
 
