--- a/theboard.html
+++ b/theboard.html
@@ -30,7 +30,8 @@
         <hr>
         <h2 style="padding-left: 5%; padding-right: 5%;">Welcome to The Board! A small game show where it's all about The Board. Contestants will pick a card that can have trivia, a challenge, and some other weird things for them to do. This time, we decided to go all out and give The Board a voice, for better or worse. It's hard to explain what this really is. Come join us on September 5th to see for yourself. Admission is free! Please try to RSVP so we can estimate how many people will show up. By RSVP-ing, you will be entered into a raffle for Berry Station Coupons!</h2>
         <h2>Sponsored by <a href="https://getberrystation.com" style="color:white;text-decoration: underline;"> Berry Station</a> and Parke Express</h2>
-        <h2><a href="https://forms.gle/y9espF8mEc1MF2XWA" style="background-color: rgb(0,0,0,0.3); color: white; padding: 10px; border-radius: 10px;">RSVP Here</a></h2>
+        <h2>RSVP Button will be here, but nothing is official yet. </h2>
+        <!-- <h2><a href="https://forms.gle/y9espF8mEc1MF2XWA" style="background-color: rgb(0,0,0,0.3); color: white; padding: 10px; border-radius: 10px;">RSVP Here</a></h2> -->
     </div>
 
     <footer>
