Mobile Fix For Footer / Clean Up

--- a/scores.html
+++ b/scores.html
@@ -42,14 +42,14 @@
     </div>
 
    <footer>
-        <p>&copy; 2025 CLMilkshake</p>
         <div class="controls">
             <label for="themeSelect">Background:</label>
             <select id="themeSelect"></select>
             <label>
                 <input type="checkbox" id="randomToggle" checked>
-                Random on refresh
+                Random Background
             </label>
+            <p style="margin-bottom: -5%;">&copy; 2025 CLMilkshake</p>
         </div>
     </footer>
 
