--- a/theboard.html
+++ b/theboard.html
@@ -28,10 +28,11 @@
     <div class="content" style="color: white; text-shadow:0 0 10px #000000; background-color:rgba(0, 0, 0, 0.3);border-radius:60px;">
         <h1>THE BOARD</h1>
         <hr>
-        <h2 style="padding-left: 5%; padding-right: 5%;">Welcome to The Board! A small game show where it's all about The Board. Contestants will pick a card that can have trivia, a challenge, and some other weird things for them to do. This time, we decided to go all out and give The Board a voice, for better or worse. It's hard to explain what this really is. Come join us on September 5th (hopefully at Clearfield's Bicentennial Theater) to see for yourself. Admission is free! Please try to RSVP so we can estimate how many people will show up. By RSVP-ing, you will be entered into a raffle!</h2>
+        <h2 style="padding-left: 5%; padding-right: 5%;">Welcome to The Board! A small game show where it's all about The Board. Contestants will pick a card that can have trivia, a challenge, and some other weird things for them to do. This time, we decided to go all out and give The Board a voice, for better or worse. It's hard to explain what this really is completely. Come join us on September 5th at Clearfield's Bicentennial Amphitheater to see for yourself. Admission is free! Please try to RSVP so we can estimate how many people will show up. By RSVP-ing, you will be entered into a raffle too, so it's a win-win!</h2>
         <h2>Sponsored by <a href="https://getberrystation.com" style="color:white;text-decoration: underline;"> Berry Station</a> and Parke Express</h2>
       <!--  <h2>RSVP Button will be here, but I don't want to take RSVPs until the stage is ready </h2>-->
-         <h2><a href="https://forms.gle/y9espF8mEc1MF2XWA" style="background-color: rgb(0,0,0,0.3); color: white; padding: 10px; border-radius: 10px;">RSVP Here</a></h2> 
+        <h2 style="font-size:300%;"><a href="https://forms.gle/y9espF8mEc1MF2XWA" style="background-color: rgb(0,0,0,0.3); color: white; padding: 10px; border-radius: 10px;">RSVP Here</a></h2> 
+        <iframe width="600" height="325" src="https://www.youtube.com/embed/-8BaqERgTRk" title="The Board Cowboy Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius:30px;"></iframe>
     </div>
 
     <footer>
