--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <div class="content">
         <h1>THE BOARD</h1>
         <hr>
-        <div class="grid-container">
+        <div class="grid-container" style="grid-template-columns: repeat(auto-fill, minmax(70vw, 50%));">
+            <div class="grid-item" style="padding-bottom: 5%;">
+                <h2 style="font-size:300%;"><b>Trailer</b></h2>
+                <div class="iframe"><iframe src="https://www.youtube.com/embed/njKzykPVVCM" title="The Board Gaming Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="width: 80%; height:100%; border-radius:20px;"></iframe></div>
+            </div>
             <div class="grid-item">
                 <a href="theboard.html">
                     <h2><b>The Board</b></h2>
