Added Location, Fixed Nav Bar and Backgrounds

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <b><a href="theboard.html">Info</a></b>
         <b><a href="scores.html">Scores</a></b>
         <b><a href="sponsors.html">Sponsors</a></b>
+        <b><a href="https://maps.app.goo.gl/ETRdtnuSQwQ2Q4q49" target="_blank"><span class="address">Location</span></a> </b>
     </nav>
 
     <div class="content">
@@ -80,7 +81,7 @@
     const randomToggle = document.getElementById("randomToggle");
     const nav = document.querySelector("nav");
     const header = document.querySelector("header");
-    const content = document.querySelector("content");
+    const content = document.querySelector(".content");
 
     themes.forEach((t, i) => {
         const option = document.createElement("option");
