--- a/theboard.html
+++ b/theboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header style="background-color:rgba(0, 0, 0, 0.3);">
+    <header>
 
         <div class="main">
             <img src="images/logo.png" style="width: 120px;">
@@ -17,12 +17,12 @@
         </div>
     </header>
 
-    <nav>
-        <b><a href="index.html">Home</a></b>
+     <nav>
+        <b><a href="#">Home</a></b>
         <b><a href="theboard.html">Info</a></b>
         <b><a href="scores.html">Scores</a></b>
         <b><a href="sponsors.html">Sponsors</a></b>
-        
+        <b><a href="https://maps.app.goo.gl/ETRdtnuSQwQ2Q4q49" target="_blank"><span class="address">Location</span></a> </b>
     </nav>
 
     <div class="content" style="color: white; text-shadow:0 0 10px #000000; background-color:rgba(0, 0, 0, 0.3);border-radius:60px;">
