--- a/sponsors.html
+++ b/sponsors.html
@@ -17,11 +17,12 @@
         </div>
     </header>
 
-    <nav>
-        <b><a href="index.html">Home</a></b>
+     <nav>
+        <b><a href="#">Home</a></b>
         <b><a href="theboard.html">Info</a></b>
         <b><a href="scores.html">Scores</a></b>
         <b><a href="sponsors.html">Sponsors</a></b>
+        <b><a href="https://maps.app.goo.gl/ETRdtnuSQwQ2Q4q49" target="_blank"><span class="address">Location</span></a> </b>
     </nav>
 
     <div class="content">
@@ -84,7 +85,7 @@
     const randomToggle = document.getElementById("randomToggle");
     const nav = document.querySelector("nav");
     const header = document.querySelector("header");
-    const content = document.querySelector("content");
+    const content = document.querySelector(".content");
 
     themes.forEach((t, i) => {
         const option = document.createElement("option");
