--- a/pictures.html
+++ b/pictures.html
@@ -37,6 +37,12 @@
             </div>
             <div class="grid-item" >
                 <a>
+                    <h2 style="font-size: 50px;"><b>Summer Colors Promo</b></h2>
+                    <img src="images/promos/TheBoardSummerPromo.png" alt="Summer Colors Promo" style="width: 50%;">
+                </a>
+            </div>
+            <div class="grid-item" >
+                <a>
                     <h2 style="font-size: 50px;"><b>Fancy Promo</b></h2>
                     <img src="images/promos/TheBoardFancyPromo.png" alt="Fancy Promo" style="width: 50%;">
                 </a>
