--- a/theboard.html
+++ b/theboard.html
@@ -18,7 +18,7 @@
     </header>
 
      <nav>
-        <b><a href="#">Home</a></b>
+        <b><a href="index.html">Home</a></b>
         <b><a href="theboard.html">Info</a></b>
         <b><a href="scores.html">Scores</a></b>
         <b><a href="sponsors.html">Sponsors</a></b>
